# FeOF_cluster_expansion

./: .gitignore  FeF2.vasp  INCAR_DFT_relaxation  README.md  cem_nm.ipynb  cem_training_energies_nm.txt  grid.ipynb  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
FeOF_gs_relaxed_structs/: POSCAR_P42_m_correct_bs.vasp  POSCAR_Pm_correct_bs.vasp  POSCAR_Pmc21_correct_bs.vasp  POSCAR_Pmn21_correct_bs.vasp
FeOF_gs_unrelaxed_structs/: POSCAR_P42_m_orig.vasp  POSCAR_Pm_orig.vasp  POSCAR_Pmn21_orig.vasp
size_1_unrelaxed/: POSCAR_0  POSCAR_1  POSCAR_2  POSCAR_4  POSCAR_5
size_2_unrelaxed/: POSCAR_10  POSCAR_100  POSCAR_101  POSCAR_102  POSCAR_103  POSCAR_104  POSCAR_105  POSCAR_106  POSCAR_107  POSCAR_108  POSCAR_109  POSCAR_11  POSCAR_110  POSCAR_111  POSCAR_112  POSCAR_113  POSCAR_114  POSCAR_115  POSCAR_116  POSCAR_117  POSCAR_118  POSCAR_119  POSCAR_12  POSCAR_120  POSCAR_121  POSCAR_122  POSCAR_123  POSCAR_124  POSCAR_125  POSCAR_126  POSCAR_127  POSCAR_128  POSCAR_129  POSCAR_13  POSCAR_130  POSCAR_131  POSCAR_132  POSCAR_134  POSCAR_135  POSCAR_136  (+91 more)
size_3_unrelaxed/: POSCAR_139  POSCAR_140  POSCAR_141  POSCAR_142  POSCAR_143  POSCAR_144  POSCAR_145  POSCAR_146  POSCAR_147  POSCAR_148  POSCAR_149  POSCAR_150  POSCAR_151  POSCAR_152  POSCAR_153  POSCAR_154  POSCAR_155  POSCAR_156  POSCAR_157  POSCAR_158  POSCAR_159  POSCAR_160  POSCAR_161  POSCAR_162  POSCAR_163  POSCAR_164  POSCAR_165  POSCAR_166  POSCAR_167  POSCAR_168  POSCAR_169  POSCAR_170  POSCAR_171  POSCAR_172  POSCAR_173  POSCAR_174  POSCAR_175  POSCAR_176  POSCAR_177  POSCAR_178  (+59 more)
(+177 files in other folders)
