[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feof-cem"
version = "0.1.0"
description = "Cluster expansion and Monte Carlo simulations for Fe(O/F) phase space"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ase>=3.22",
    "icet>=3.0",
    "mchammer>=0.13",
    "trainstation>=0.5",
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "seaborn>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter>=1.0"]

[project.scripts]
feof-view-energy = "feof.view_energy:main"
feof-clean-poscar = "feof.clean_poscar:main"

[tool.setuptools]
packages = ["feof"]

[tool.setuptools.package-dir]
"" = "src"
